# AlphaBank-API

./: .env copy.example  .env.example  .gitignore  API_DOCUMENTATION.md  Alpha_Bank_API.postman_collection.json  CORRECAO_BANCO.md  Cargo.toml  README.md  fix_columns.sql  schema.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: auth.rs  categories.rs  goals.rs  mod.rs  notifications.rs  recurring.rs  transactions.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/utils/: mod.rs
static/: README.md  dashboard.html  index.html  register.html  stats.html
