[package]
name = "alpha-bank-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database - MySQL
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "uuid", "chrono", "migrate", "rust_decimal"] }

# Decimal numbers
rust_decimal = { version = "1.39", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Utilities
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

